tests/error/class_multiple_public.gw
// [contains] more than
global class c{}
global class d{}
